Changed the package name

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.danac78.stripmath"
+    package="org.danac78.challengemath"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Launch"
+            android:name="org.danac78.stripmath.Launch"
             android:label="@string/title_activity_launch" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MathActivity"
+            android:name="org.danac78.stripmath.MathActivity"
             android:label="@string/title_activity_math" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
