--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,17 +11,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="org.danac78.stripmath.Launch"
-            android:label="@string/title_activity_launch" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="org.danac78.stripmath.MathActivity"
+       <activity
+            android:name="org.danac78.challengemath.MathActivity"
             android:label="@string/title_activity_math" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
