--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,9 +11,18 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-       <activity
-            android:name="org.danac78.challengemath.MathActivity"
-            android:label="@string/title_activity_math" >
+        <activity
+            android:name=".MathActivity"
+            android:label="@string/title_activity_math" android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Menu"
+            android:label="@string/title_activity_menu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
